# openinsure

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  bandit_report.json  check_reserves.py  docker-compose.yml  explore_dashboard.py  explore_nav.py  populate_reserves.py  pyproject.toml  test_api_v107.py  test_dashboard.py  test_e2e_v95.py  test_functional_v95.py
.aiscrum/: INTEGRATION.md  config.yaml
.copilot/: mcp-config.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: squad.agent.md
.github/workflows/: cd.yml  ci.yml  e2e.yml
.squad/: .first-run  charter.md  config.json  decisions.md  routing.md  team.md
.squad/casting/: registry.json
.squad/identity/: now.md  wisdom.md
.squad/templates/: completion-checklist.md  issue-lifecycle.md  session-notes.md  squad.agent.md
dashboard/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  index.css
dashboard/tests/: broker-rbac.spec.ts
docs/: CAPABILITIES.md  TECHNICAL_OVERVIEW.md  developer-guide.md
docs/architecture/: ADR.md  ai-native-assessment.md  architecture-spec-v01.md  azure-infrastructure.md  data-model.md  foundry-integration-strategy.md  mcp-integration.md  operating-model-v02.md  overview.md  process-completeness.md  process-flows.md
docs/deployment/: azure-setup.md
docs/guides/: developer-quickstart.md  document-channels.md  e2e-demo-case.md  e2e-test-results.md  enterprise-integration-guide.md  feature-guide.md
infra/: main.bicep  parameters.json
infra/modules/: acr.bicep  containerapps.bicep  cosmos.bicep  eventgrid.bicep  identity.bicep  monitoring.bicep  search.bicep  servicebus.bicep  sql.bicep  storage.bicep  vnet.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
knowledge/guidelines/: cyber_underwriting.yaml
knowledge/learned/: deployment-quirks.md  foundry-patterns.md  index.md  portal-lessons.md  security-hardening-gotchas.md  sql-gotchas.md  testing-patterns.md
knowledge/products/: cyber_liability_smb.yaml
knowledge/regulatory/: us_cyber_requirements.yaml
scripts/: capture_screenshots.py  deploy.ps1  foundry_smoke_test.py  qa_portal_tests.py  qa_scenario_tests.py  smoke_test.py  test_escalation.py
src/openinsure/: .env.example  config.py  logging.py  main.py  middleware.py  rate_limit.py
src/scripts/: create_foundry_agents.py  create_sql_user.py  deploy_new_agents.py  (+26 more)
tests/: conftest.py  conftest_modes.py  test_e2e_v95_functional.py
(+358 files in other folders)
